<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.shiva.jambottle.MainActivity">

    <LinearLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/jam_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/jam_date"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/days_to_go"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/days_to_go_label"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/days"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/days" />

            <TextView
                android:id="@+id/days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="120sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_gradient_white_64sp"
                android:gravity="bottom|center_horizontal"
                android:onClick="openCalc"
                android:padding="16sp"
                android:text="@string/calc_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/deepSaffron"
                app:layout_constraintBottom_toTopOf="@+id/qp_button"
                app:layout_constraintEnd_toStartOf="@+id/mock_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mock_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="4dp"
                android:drawableTop="@drawable/ic_pen_paper_white_54sp"
                android:gravity="bottom|center_horizontal"
                android:onClick="openMock"
                android:paddingBottom="16sp"
                android:paddingEnd="16sp"
                android:paddingStart="16sp"
                android:paddingTop="24sp"
                android:text="@string/mock_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/materialGreen"
                app:layout_constraintBottom_toTopOf="@+id/key_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/calc_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/qp_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="2dp"
                android:drawableTop="@drawable/ic_assignment_white_64sp"
                android:gravity="bottom|center_horizontal"
                android:onClick="openResource"
                android:padding="16sp"
                android:text="@string/qp_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/materialCyan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/key_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calc_button" />

            <Button
                android:id="@+id/key_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="2dp"
                android:drawableTop="@drawable/ic_vpn_key_white_64sp"
                android:gravity="bottom|center_horizontal"
                android:onClick="openResource"
                android:padding="16sp"
                android:text="@string/key_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/materialRed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/qp_button"
                app:layout_constraintTop_toBottomOf="@+id/mock_button" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
